Fix Task datepicker overflow and null due date

--- a/epfirms-client/src/app/shared/editable-datepicker/editable-datepicker.component.scss
+++ b/epfirms-client/src/app/shared/editable-datepicker/editable-datepicker.component.scss
@@ -1,8 +1,10 @@
-.datepicker-input {
-    @apply bg-transparent text-sm font-medium text-gray-900 px-2 py-1 border border-transparent border-dashed hover:bg-white hover:border-gray-300 focus:bg-white focus:border-transparent focus:shadow-sm;
-  
-    &::placeholder {
-      @apply text-gray-400 font-normal;
-    }
+.input-box {
+  @apply bg-transparent text-sm text-gray-700 w-full px-2 py-1 border border-transparent border-dashed hover:bg-white hover:border-gray-300 focus:bg-white focus:border-transparent focus:shadow-sm;
+
+  min-width: 12ch;
+
+  &::placeholder {
+    @apply text-gray-400 font-normal;
+  }
   }
   
